objects/pw_cc__CountryObject__c.object
<CustomObject>
    <description>A list of standard countries used by CountryComplete for both auto-completion at the UI level and also for validation and standardization and the database level</description>
    <fields>
        <fullName>pw_cc__AllowOnlyListedStates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to “Yes” and there are no states for the specified country then this setting will be ignored.</description>
        <label>Allow only listed States</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__Continent__c</fullName>
        <label>Continent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this country used in this system</description>
        <inlineHelpText>Determines whether the field appears as a completion-item on menus</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsStateMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to “Yes” then NULL value of State is not Allowed for this Country</description>
        <label>State is Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsZipCodeMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZIP Code is mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsoCode_2__c</fullName>
        <externalId>true</externalId>
        <label>ISO 3166-2 Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pw_cc__IsoCode_3__c</fullName>
        <label>ISO 3166-3 Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pw_cc__PhoneCode__c</fullName>
        <label>Phone Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__TimeZone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Time Zone for countries which span only a single Time Zone</inlineHelpText>
        <label>Time Zone</label>
        <referenceTo>pw_cc__TimeZone__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pw_cc__TrimmedName__c</fullName>
        <description>Takes the first 80 characters of the country name which ensures the right length for inserting into standard country fields. Last spaces should be trimmed</description>
        <formula>TRIM ( LEFT( Name, 80 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trimmed Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__UseStateCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to “Yes” then when the user selects “United States” and “Ohio” then we store [State].[IsoCode] “OH” in the State field.
If value is “No” then we store the [State].[Name] – “Ohio”</description>
        <inlineHelpText>When enabled the State field is completed with the state ISO Code value.  Otherwise the state Name value is used.</inlineHelpText>
        <label>Use Subcountry Code in State field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ValidateZipCode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validate ZIP Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeFailMessage__c</fullName>
        <label>ZIP Code pattern fail message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeRegExp__c</fullName>
        <label>ZIP Code Regular Expression</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>pw_cc__All</fullName>
        <columns>NAME</columns>
        <columns>pw_cc__Enabled__c</columns>
        <columns>pw_cc__AllowOnlyListedStates__c</columns>
        <columns>pw_cc__IsStateMandatory__c</columns>
        <columns>pw_cc__ValidateZipCode__c</columns>
        <columns>pw_cc__ZipCodeFailMessage__c</columns>
        <columns>pw_cc__ZipCodeRegExp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>